added photo and link

--- a/recipes/painkiller.html
+++ b/recipes/painkiller.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><h1>Pain Killer</h1></title>
-</head>
-<p></p><body>
+</head><h1>Pain Killer</h1>
+<p><img src="./img/painkiller.jpg"></p><body>
     <ol>
         <li>1 ounce cream of coconut</li>
         <li>1 ounce orange juice</li>
@@ -24,7 +24,7 @@
     <p><strong>Step 3</strong></p>
     <p>4 ounces of pineapple juice</output></p>
     <p><strong>Step 4</strong></p>
-    <p>Shake vigorously 15 seconds. We want FOAM!</p>
+    <p>Shake vigorously for 15 seconds. We want FOAM!</p>
     <p>Strain into a rocks glass filled with crushed ice.</p>
     <p>Garnish with grated nutmeg.</p>
     </p>
