--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Odin Recipes</h1>
 <p>
-    <a href="recipes/painkiller.html">Pain Killer</a>
+    <a href="recipes/painkiller.html" target="_blank" rel="noopener noreferrer">Pain Killer</a>
 </p>
 </body>
 </html>
