trying to get jpg to work

--- a/recipes/painkiller.html
+++ b/recipes/painkiller.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><h1>Pain Killer</h1></title>
+    <title>Pain Killer</title>
 </head><h1>Pain Killer</h1>
-<p><img src="./img/painkiller.jpg"></p><body>
+<p><img src="../img/painkiller.jpg" alt="painkiller"></p><body>
     <ol>
         <li>1 ounce cream of coconut</li>
         <li>1 ounce orange juice</li>
