--- a/recipes/painkiller.html
+++ b/recipes/painkiller.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pain Killer</title>
 </head><h1>Pain Killer</h1>
-<p><img src="../img/painkiller.jpg" alt="painkiller"></p><body>
+<p><img src="../img/painkiller.jpg" alt="painkiller" height="510" width="410"></p><body>
     <ol>
         <li>1 ounce cream of coconut</li>
         <li>1 ounce orange juice</li>
