added grasshopper link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Odin Recipes</h1>
 <p>
     <a href="recipes/painkiller.html" target="_blank" rel="noopener noreferrer">Pain Killer</a>
+    <a href="recipes/grasshopper.html" target="_blank" rel="noopener noreferrer">Grasshopper</a>
 </p>
 </body>
 </html>
