--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>
     <a href="recipes/painkiller.html" target="_blank" rel="noopener noreferrer">Pain Killer</a>
 <p><a href="recipes/grasshopper.html" target="_blank" rel="noopener noreferrer">Grasshopper</a></p>
-</p>
+<p><a href="recipes/ranch_water.html" target="_blank" rel="noopener noreferrer">Ranch Water</a></p>
+ </p>
 </body>
 </html>
