--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Odin Recipes</h1>
+<h1>Odin Cocktail Recipes</h1>
 <p>
     <a href="recipes/painkiller.html" target="_blank" rel="noopener noreferrer">Pain Killer</a>
 <p><a href="recipes/grasshopper.html" target="_blank" rel="noopener noreferrer">Grasshopper</a></p>
