--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 <h1>Odin Cocktail Recipes</h1>
 <p>
-    <a href="recipes/painkiller.html" target="_blank" rel="noopener noreferrer">Pain Killer</a>
-<p><a href="recipes/grasshopper.html" target="_blank" rel="noopener noreferrer">Grasshopper</a></p>
-<p><a href="recipes/ranch_water.html" target="_blank" rel="noopener noreferrer">Ranch Water</a></p>
- </p>
+    <ul>
+        <li><a href="recipes/painkiller.html" target="_blank" rel="noopener noreferrer">Pain Killer</a></li>
+<li><a href="recipes/grasshopper.html" target="_blank" rel="noopener noreferrer">Grasshopper</a></li>
+<li><a href="recipes/ranch_water.html" target="_blank" rel="noopener noreferrer">Ranch Water</a></li>
+</ul> </p>
 </body>
 </html>
