changed home link

--- a/recipes/ranch_water.html
+++ b/recipes/ranch_water.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <body>
+    <p><a href="../index.html">Home</a>
+</p>    
+</body>
     <title>Ranch Water</title>
 </head><h1>Ranch Water</h1>
 <p><img src="../img/ranchwater.jpg" alt="ranchwater" height="620" width="580"></p><body>
@@ -22,7 +26,5 @@
     <li>Top the glass off with Topo Chico and garnish with lime wedge</li>
 </ol></p>
 </body>
-<body>
-    <p><a href="../index.html">Home</a></p>
-</body>
+
 </html>
