changed home link location

--- a/recipes/grasshopper.html
+++ b/recipes/grasshopper.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <body>
+    <p><a href="../index.html">Home</a>
+</p>    
+</body>
     <title>Grasshopper</title>
 </head>
 <h1>Grasshopper</h1>
@@ -22,6 +26,5 @@
     <p>Garnish with shaved nutmeg</p>
 </p>
 </body>
-<body>
-    <p><a href="../index.html">Home</a>
+
 </html>
